2011-12-03  Alan Modra  <amodra@gmail.com>

	PR ld/13470
	* elf32-ppc.c (ppc_elf_copy_indirect_symbol): Revert substantive
	change in 2011-07-01 commit.  Comment.
	* elf64-ppc.c (ppc64_elf_copy_indirect_symbol): Likewise.

2011-12-01  Mikael Pettersson  <mikpe@it.uu.se>

	Apply mainline patches
	* elf32-m68k.c (elf_m68k_check_relocs) <R_68K_8, R68K_16, R_68K_32>: For
	non-SEC_ALLOC sections break before GOT and PLT accounting.

2011-12-01  Hans-Peter Nilsson  <hp@axis.com>

	Apply mainline patches
	* elf32-cris.c (cris_elf_check_relocs) <plt accounting for
	R_CRIS_8, R_CRIS_16, and R_CRIS_32>: Move early break for
	non-SEC_ALLOC sections before GOT and PLT accounting.

2011-11-21  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.22.0
	* Makefile.am (RELEASE): Unset.
	* configure, Makefile.in: Regenerate.

2011-11-21  Tristan Gingold  <gingold@adacore.com>

	* configure.in: Bump version to 2.22
	* Makefile.am (RELEASE): Set.
	* configure, Makefile.in: Regenerate.

2011-11-15  Maxim Kuvyrkov  <maxim@codesourcery.com>

	Backport from mainline:

	2011-11-14  Maxim Kuvyrkov  <maxim@codesourcery.com>
        * elfxx-mips.c (mips_n64_exe_plt0_entry): Use 64-bit move.

2011-11-15  Alan Modra  <amodra@gmail.com>
	    Andreas Tobler  <andreast@fgznet.ch>

	* elflink.c (_bfd_elf_create_got_section): Replace
	bfd_make_section_with_flags with bfd_make_section_anyway_with_flags.
	(_bfd_elf_link_create_dynamic_sections): Likewise.
	* elf32-ppc.c (ppc_elf_create_glink): Likewise.
	(ppc_elf_create_dynamic_sections): Likewise.

2011-11-09  Alan Modra  <amodra@gmail.com>

	* elflink.c (bfd_elf_gc_mark_dynamic_ref_symbol): Mark syms in
	executables when export_dynamic.

2011-11-08  Alan Modra  <amodra@gmail.com>

	* elf64-ppc.c (struct ppc64_elf_obj_tdata): Rename
	ha_relocs_not_using_r2 to unexpected_toc_insn.
	(ok_lo_toc_insn): New function.
	(ppc64_elf_edit_toc): Check insn on lo toc reloc.  Emit warning.